--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -13712,6 +13712,26 @@ Concentric</property>
                                                     <property name="position">2</property>
                                                   </packing>
                                                 </child>
+                                                <child>
+                                                  <widget class="GtkButton" id="button_preferences_not_menu_quit">
+                                                    <property name="label">gtk-quit</property>
+                                                    <property name="width_request">50</property>
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="can_default">True</property>
+                                                    <property name="receives_default">True</property>
+                                                    <property name="has_tooltip">True</property>
+                                                    <property name="tooltip" translatable="yes">Quit</property>
+                                                    <property name="relief">half</property>
+                                                    <property name="use_stock">True</property>
+                                                    <signal name="clicked" handler="on_quit1_activate" swapped="no"/>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="expand">True</property>
+                                                    <property name="fill">True</property>
+                                                    <property name="position">3</property>
+                                                  </packing>
+                                                </child>
                                               </widget>
                                               <packing>
                                                 <property name="expand">False</property>
