--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -15481,125 +15481,41 @@ Concentric</property>
                                                             <widget class="GtkVBox" id="vbox81">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
+                                                            <property name="border_width">10</property>
                                                             <property name="spacing">12</property>
                                                             <child>
+                                                            <widget class="GtkLabel" id="label135">
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">False</property>
+                                                            <property name="label">&lt;b&gt;Initial calibration&lt;/b&gt;</property>
+                                                            <property name="use_markup">True</property>
+                                                            <property name="justify">center</property>
+                                                            </widget>
+                                                            <packing>
+                                                            <property name="expand">False</property>
+                                                            <property name="fill">False</property>
+                                                            <property name="position">0</property>
+                                                            </packing>
+                                                            </child>
+                                                            <child>
                                                             <widget class="GtkImage" id="image_encoder_inertial_instructions">
+                                                            <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="stock">gtk-missing-image</property>
                                                             </widget>
                                                             <packing>
                                                             <property name="expand">True</property>
                                                             <property name="fill">True</property>
-                                                            <property name="position">0</property>
-                                                            </packing>
-                                                            </child>
-                                                            <child>
-                                                            <widget class="GtkTable" id="table1">
-                                                            <property name="can_focus">False</property>
-                                                            <property name="n_rows">3</property>
-                                                            <property name="n_columns">2</property>
-                                                            <child>
-                                                            <widget class="GtkLabel" id="label153">
-                                                            <property name="width_request">50</property>
-                                                            <property name="height_request">40</property>
-                                                            <property name="visible">True</property>
-                                                            <property name="can_focus">False</property>
-                                                            <property name="yalign">0</property>
-                                                            <property name="label">A</property>
-                                                            </widget>
-                                                            <packing>
-                                                            <property name="x_options"/>
-                                                            </packing>
-                                                            </child>
-                                                            <child>
-                                                            <widget class="GtkLabel" id="label156">
-                                                            <property name="height_request">40</property>
-                                                            <property name="visible">True</property>
-                                                            <property name="can_focus">False</property>
-                                                            <property name="yalign">0</property>
-                                                            <property name="label">B</property>
-                                                            </widget>
-                                                            <packing>
-                                                            <property name="top_attach">1</property>
-                                                            <property name="bottom_attach">2</property>
-                                                            <property name="x_options"/>
-                                                            </packing>
-                                                            </child>
-                                                            <child>
-                                                            <widget class="GtkLabel" id="label157">
-                                                            <property name="height_request">40</property>
-                                                            <property name="visible">True</property>
-                                                            <property name="can_focus">False</property>
-                                                            <property name="yalign">0</property>
-                                                            <property name="label">C</property>
-                                                            </widget>
-                                                            <packing>
-                                                            <property name="top_attach">2</property>
-                                                            <property name="bottom_attach">3</property>
-                                                            <property name="x_options"/>
-                                                            </packing>
-                                                            </child>
-                                                            <child>
-                                                            <widget class="GtkTextView" id="textview2">
-                                                            <property name="visible">True</property>
-                                                            <property name="can_focus">True</property>
-                                                            <property name="editable">False</property>
-                                                            <property name="wrap_mode">word</property>
-                                                            <property name="cursor_visible">False</property>
-                                                            <property name="text" translatable="yes">Pull.</property>
-                                                            </widget>
-                                                            <packing>
-                                                            <property name="left_attach">1</property>
-                                                            <property name="right_attach">2</property>
-                                                            <property name="top_attach">2</property>
-                                                            <property name="bottom_attach">3</property>
-                                                            <property name="y_options">GTK_FILL</property>
-                                                            </packing>
-                                                            </child>
-                                                            <child>
-                                                            <widget class="GtkTextView" id="textview3">
-                                                            <property name="visible">True</property>
-                                                            <property name="can_focus">True</property>
-                                                            <property name="editable">False</property>
-                                                            <property name="wrap_mode">word</property>
-                                                            <property name="cursor_visible">False</property>
-                                                            <property name="text" translatable="yes">Roll de machine to wrap the rope.</property>
-                                                            </widget>
-                                                            <packing>
-                                                            <property name="left_attach">1</property>
-                                                            <property name="right_attach">2</property>
-                                                            <property name="top_attach">1</property>
-                                                            <property name="bottom_attach">2</property>
-                                                            <property name="y_options">GTK_FILL</property>
-                                                            </packing>
-                                                            </child>
-                                                            <child>
-                                                            <widget class="GtkTextView" id="textview1">
-                                                            <property name="visible">True</property>
-                                                            <property name="can_focus">True</property>
-                                                            <property name="editable">False</property>
-                                                            <property name="wrap_mode">word</property>
-                                                            <property name="cursor_visible">False</property>
-                                                            <property name="text" translatable="yes">Start capture with the rope completely unwrapped.</property>
-                                                            </widget>
-                                                            <packing>
-                                                            <property name="left_attach">1</property>
-                                                            <property name="right_attach">2</property>
-                                                            <property name="y_options">GTK_FILL</property>
-                                                            </packing>
-                                                            </child>
-                                                            </widget>
-                                                            <packing>
-                                                            <property name="expand">False</property>
-                                                            <property name="fill">False</property>
                                                             <property name="position">1</property>
                                                             </packing>
                                                             </child>
                                                             <child>
-                                                            <widget class="GtkLabel" id="label135">
+                                                            <widget class="GtkLabel" id="label136">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
-                                                            <property name="label">Inital calibration. Please put the inertial machine at zero position and click calibrate</property>
+                                                            <property name="label">Start with the rope completely unwrapped and then click on Calibrate.</property>
+                                                            <property name="use_markup">True</property>
+                                                            <property name="justify">center</property>
                                                             </widget>
                                                             <packing>
                                                             <property name="expand">False</property>
@@ -15634,8 +15550,9 @@ Concentric</property>
                                                             </child>
                                                             <child>
                                                             <widget class="GtkLabel" id="label_wait">
+                                                            <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
-                                                            <property name="label">Please, wait 3 seconds.</property>
+                                                            <property name="label"> </property>
                                                             </widget>
                                                             <packing>
                                                             <property name="expand">False</property>
@@ -18243,6 +18160,9 @@ Concentric</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
